# autoSmoke

./: .gitignore  CSV_EXPORT_EXAMPLE.md  Makefile  PHASE_IMPLEMENTATION.md  QUICKSTART.md  README.md
backend/: MIGRATION_INDEXES.md  add_thermocouples.py  app.py  check_settings.py  clear_data.py  fix_hysteresis.py  manage_database.py  migrate_add_adaptive_pid.py  migrate_add_indexes.py  migrate_add_pause_fix.py  migrate_add_phase_columns.py  migrate_control_mode.py  migrate_fix_duplicate_cs_pins.py  migrate_phases.py  pyproject.toml  recreate_db.py  smoker.service  startup_migrations.py  test_session_edit.py
backend/api/routers/: alerts.py  control.py  export.py  maintenance.py  readings.py  recipes.py  settings.py  smokes.py  thermocouples.py
backend/core/: adaptive_pid.py  alerts.py  app_state.py  config.py  container.py  controller.py  data_cleanup.py  db_maintenance.py  hardware.py  hardware_service.py  performance.py  phase_manager.py  pid.py  pid_autotune.py  session_service.py
backend/core/control/: __init__.py  control_loop.py
backend/db/: models.py  session.py
backend/db/repositories/: __init__.py  events_repo.py  readings_repo.py  settings_repo.py
backend/tests/: conftest.py  test_alerts.py  test_control_strategy.py  test_controller.py  test_hardware_service.py  test_pid.py  test_repositories.py  test_session_service.py  test_sim.py
backend/ws/: manager.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
(+16 files in other folders)
